<resources>
    <string name="app_name">Meteo</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="menu_ajouter">Ajouter</string>
    <string name="menu_desc">DESC</string>
    <string name="dialog_ajouter">Ajouter</string>
    <string name="dialog_annuler">Annuler</string>
    <string name="dialog_supprimer">Supprimer</string>
    <string name="title_activity_weather">Weather</string>
    <string name="weather_temperature">%1$d °C</string>
    <string name="weather_humidity">%1$d %%</string>
    <string name="weather_pressure">%1$d hPa</string>
    <string name="text_pressure">Pressure</string>
    <string name="text_temperature">Temperature</string>
    <string name="text_humidity">Humidity</string>
    <string name="text_not_found">Not found</string>
    <string name="dialog_ajouter_une_ville">Ajouter une ville</string>
    <string name="hint_paris_chennai">Paris, Chennai....</string>

    <string-array name="list_city">
        <item>Paris</item>
        <item>Nante</item>
        <item>Toulouse</item>
        <item>Marseille</item>
        <item>Bretagne</item>
    </string-array>
</resources>